--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78165356",
+   "id": "261fbff5",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce3e610",
+   "id": "a771df19",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e98ce0",
+   "id": "3018ecd0",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "80ee0d66",
+   "id": "12dbbbc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a2880d",
+   "id": "17622214",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "153a841e",
+   "id": "1e6d42c1",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ce78d8a",
+   "id": "f17c813d",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba595b05",
+   "id": "24fe90df",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "50cdac0e",
+   "id": "a64f61ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e95158d0",
+   "id": "84c746fc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdbb5c49",
+   "id": "e5f67db3",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6f3d222f",
+   "id": "13d1335b",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12c206f",
+   "id": "27605812",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81b26c9e",
+   "id": "31d0a71c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4043d7cf",
+   "id": "08cf3968",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "82b2b878",
+   "id": "5b95eed0",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c54de07",
+   "id": "f26e508f",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2e14fa8c",
+   "id": "181475c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cfd2ad0b",
+   "id": "fae8203c",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ea4b1d1e",
+   "id": "072eabbe",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "113cd1dd",
+   "id": "86ad9e2a",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3d8740",
+   "id": "6bfbb4be",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f79934f5",
+   "id": "5b834301",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4e0c97a0",
+   "id": "8718040c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d2045397",
+   "id": "ba324d09",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2d540cf5",
+   "id": "a2434938",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d4b0ed38",
+   "id": "13352f50",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fd0f80",
+   "id": "9aa7fe3c",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb8765c",
+   "id": "1fa49cf9",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "953ecd9b",
+   "id": "2dc86297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dfa52735",
+   "id": "8c7b37a8",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "106ba14c",
+   "id": "0ad24e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ea030a39",
+   "id": "a8e252cf",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b6f18c",
+   "id": "54eb0241",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32ee8d0",
+   "id": "4e21510c",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -721,8 +721,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "4129f53a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def biggest_and_smallest(numbers):   # numbers will be a list of integers\n",
+    "    biggest = numbers[0]             # assume that numbers[0] is the largest\n",
+    "    smallest = numbers[0]            # assume that numbers[0] is also the smallest\n",
+    "    \n",
+    "    for one_number in numbers:       # go through each element in numbers\n",
+    "\n",
+    "        if one_number > biggest:     # is it bigger than what we've seen before?\n",
+    "            biggest = one_number     \n",
+    "            \n",
+    "        if one_number < smallest:\n",
+    "            smallest = one_number\n",
+    "    \n",
+    "    return [smallest, biggest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "07838049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 10]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "biggest_and_smallest([10, 30, 5, 18, 27, 42, 15])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "836dbfdc",
+   "id": "260dd6e8",
    "metadata": {},
    "outputs": [],
    "source": []
