--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "261fbff5",
+   "id": "496d71fd",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a771df19",
+   "id": "9de3343c",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3018ecd0",
+   "id": "b591da36",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12dbbbc3",
+   "id": "270b1737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17622214",
+   "id": "b9c330a8",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1e6d42c1",
+   "id": "d89249fd",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f17c813d",
+   "id": "7d682dea",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24fe90df",
+   "id": "971ad8a2",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a64f61ed",
+   "id": "4318ccd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "84c746fc",
+   "id": "49e12a80",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e5f67db3",
+   "id": "f6e1f9e1",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "13d1335b",
+   "id": "e22a84f7",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27605812",
+   "id": "a9a82a00",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31d0a71c",
+   "id": "829252e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "08cf3968",
+   "id": "7876d659",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5b95eed0",
+   "id": "d2135d7f",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26e508f",
+   "id": "579b30b5",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "181475c2",
+   "id": "568df134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fae8203c",
+   "id": "307bfe42",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "072eabbe",
+   "id": "6467c2fc",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "86ad9e2a",
+   "id": "35d2f76b",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bfbb4be",
+   "id": "b636d6da",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b834301",
+   "id": "b9ef6500",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8718040c",
+   "id": "1787b99c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ba324d09",
+   "id": "4c4a7240",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a2434938",
+   "id": "34208410",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "13352f50",
+   "id": "7664cd1c",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa7fe3c",
+   "id": "04f03647",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fa49cf9",
+   "id": "700763ad",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2dc86297",
+   "id": "00ed5017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8c7b37a8",
+   "id": "d321daa1",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0ad24e51",
+   "id": "41edb8c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a8e252cf",
+   "id": "8edbe057",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54eb0241",
+   "id": "82aebcf9",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e21510c",
+   "id": "72ec0e26",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -721,8 +721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4129f53a",
+   "execution_count": 32,
+   "id": "24743a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,27 +733,27 @@
     "    for one_number in numbers:       # go through each element in numbers\n",
     "\n",
     "        if one_number > biggest:     # is it bigger than what we've seen before?\n",
-    "            biggest = one_number     \n",
+    "            biggest = one_number     # if so, declare it the biggest (so far)\n",
     "            \n",
-    "        if one_number < smallest:\n",
-    "            smallest = one_number\n",
+    "        if one_number < smallest:    # is it smaller than what we've seen before?\n",
+    "            smallest = one_number    # if so, declare it the smallest\n",
     "    \n",
-    "    return [smallest, biggest]"
+    "    return [smallest, biggest]       # return a 2-element list with smallest and biggest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "07838049",
+   "execution_count": 33,
+   "id": "55d307a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 10]"
+       "[5, 42]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,8 +764,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "7bc99f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [10, 30, 5, 18, 27, 42, 15]\n",
+    "min(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e4b23752",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "260dd6e8",
+   "id": "e43a7e64",
    "metadata": {},
    "outputs": [],
    "source": []
